[package]
name = "g-rab"
version = "0.1.0"
authors = ["Jason Leber <leberjs@gmail.com>"]
license = "MIT"
description = "Tool to set and edit bookmarks in desired editor"
repository = "https://github.com/leberjs/grab"
edition = "2021"

[[bin]]
name = "grab"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colorized = "1.0.0"
dirs = "4.0.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
